Change header BG to info gradient

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="bg-dark">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header bg-info bg-gradient">
                 <h1 class="text-center text-light">Hi! My Name is Mark Vincent,</h1>
             </div>
         </div>
