--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             <div class="card-header bg-info bg-gradient">
                 <h1 class="text-center text-light">Hi! My Name is Mark Vincent,</h1>
             </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3 class="d-flex justify-content-justify">Greetings! I am Mark Vincent De Jesus, 23 Years old.</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer></footer>
