--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <div class="col-md-6">
                         <h3 class="d-flex justify-content-justify">Greetings! I am Mark Vincent De Jesus, 23 Years old.</h3>
                     </div>
+                    <div class="col-md-6">
+                        <img class="rounded" src="GRADPIC.JPG" alt="Graduation Picture">
+                    </div>
                 </div>
             </div>
         </div>
