Adjust image size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <h3 class="d-flex justify-content-justify">Greetings! I am Mark Vincent De Jesus, 23 Years old.</h3>
                     </div>
                     <div class="col-md-6">
-                        <img class="rounded" src="GRADPIC.JPG" alt="Graduation Picture">
+                        <img class="rounded img-fluid" src="GRADPIC.JPG" alt="Graduation Picture">
                     </div>
                 </div>
             </div>
