--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             <div class="d-flex justify-content-center">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link active fw-semibold" aria-current="page" href="#">Home</a>
+                                        <a class="nav-link active fw-semibold" aria-current="page" href="#home-page">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link fw-semibold" href="#">About Me</a>
+                                        <a class="nav-link fw-semibold" href="#about-me-page">About Me</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link fw-semibold" href="#">Projects</a>
@@ -42,112 +42,87 @@
             </div>
         </header>
         <main class="main-content">
-            <div class="content-wrapper" id="gradient-background">
-                <div class="d-flex justify-content-center" id="top-greetings">
-                    <div class="row greetings-wrapper">
-                        <p class="h2 text-center">
-                            <span id="typed-text-1"></span><span class="fw-semibold" id="typed-text-2"></span><br>
-                        </p>
-                        <p class="h2 text-center"><span id="typed-text-3"></span><span class="fw-semibold" id="typed-text-4"></span></p>
-                    </div>                    
-                </div>
-                <div class="d-flex justify-content-center">
-                    <div class="row image-wrapper">
-                        <img class="rounded" id="profile-img" src="profile.png" alt="profile.png">
+            <div class="home-wrapper" id="home-page">
+                <div class="content-wrapper" id="gradient-background">
+                    <div class="d-flex justify-content-center" id="top-greetings">
+                        <div class="row greetings-wrapper">
+                            <p class="h2 text-center">
+                                <span id="typed-text-1"></span><span class="fw-semibold" id="typed-text-2"></span><br>
+                            </p>
+                            <p class="h2 text-center"><span id="typed-text-3"></span><span class="fw-semibold" id="typed-text-4"></span></p>
+                        </div>                    
                     </div>
-                </div>
-                <div class="d-flex justify-content-center pt-2">
-                    <div class="row description-wrapper">
-                        <p class="h2 text-center"><span class="fw-semibold" id="typed-text-5"></span>
-                        </p>
+                    <div class="d-flex justify-content-center">
+                        <div class="row image-wrapper">
+                            <img class="rounded" id="profile-img" src="profile.png" alt="profile.png">
+                        </div>
                     </div>
-                </div>
-                <div class="d-flex justify-content-center pt-2">
-                    <div class="row">
-                        <div class="col-lg-8 col-md-8">
-                            <div class="hero-social-list">
-                                <ul class="d-inline-flex fs-1">
-                                    <li>
-                                        <a class="contact-icon text-info-emphasis px-2" href="https://github.com/SilentShadow01" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="contact-icon text-info-emphasis px-2" href="https://www.facebook.com/MVinCentDeJesus/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="contact-icon text-info-emphasis px-2" href="https://www.linkedin.com/in/mark-vincent-de-jesus-9048242aa/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="contact-icon text-info-emphasis px-2" href="mailto:markvincentd625@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-                                    </li>
-                                </ul>
+                    <div class="d-flex justify-content-center pt-2">
+                        <div class="row description-wrapper">
+                            <p class="h2 text-center"><span class="fw-semibold" id="typed-text-5"></span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center pt-2">
+                        <div class="row">
+                            <div class="col-lg-8 col-md-8">
+                                <div class="hero-social-list">
+                                    <ul class="d-inline-flex fs-1">
+                                        <li>
+                                            <a class="contact-icon text-info-emphasis px-2" href="https://github.com/SilentShadow01" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="contact-icon text-info-emphasis px-2" href="https://www.facebook.com/MVinCentDeJesus/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="contact-icon text-info-emphasis px-2" href="https://www.linkedin.com/in/mark-vincent-de-jesus-9048242aa/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="contact-icon text-info-emphasis px-2" href="mailto:markvincentd625@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="icon-wrapper mt-5" style="background-color: rgba(255, 255, 255, 0.5);">
-                    <div class="row p-2">
-                        <ul class="d-inline-flex d-flex justify-content-between mb-0">
-                            <li>
-                                <img class="tech-img" src="bootstrap.png" alt="bootstrap.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="java-script.png" alt="java-script.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="c-sharp.png" alt="c-sharp.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="css-3.png" alt="css-3.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="html.png" alt="html.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="java.png" alt="java.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="mysql.png" alt="mysql.png">
-                            </li>
-                            <li>
-                                <img class="tech-img" src="php.png" alt="php.png">
-                            </li>
-                        </ul>
+                    <div class="icon-wrapper mt-5" style="background-color: rgba(255, 255, 255, 0.5);">
+                        <div class="row p-2">
+                            <ul class="d-inline-flex d-flex justify-content-between mb-0">
+                                <li>
+                                    <img class="tech-img" src="bootstrap.png" alt="bootstrap.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="java-script.png" alt="java-script.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="c-sharp.png" alt="c-sharp.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="css-3.png" alt="css-3.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="html.png" alt="html.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="java.png" alt="java.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="mysql.png" alt="mysql.png">
+                                </li>
+                                <li>
+                                    <img class="tech-img" src="php.png" alt="php.png">
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <div class="about-me-wrapper" id="about-me-page">
+
             </div>
         </main>    
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <!-- Add this script to control typing animation -->
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    const text1 = document.getElementById('typed-text-1');
-    const text2 = document.getElementById('typed-text-2');
-    const text3 = document.getElementById('typed-text-3');
-    const text4 = document.getElementById('typed-text-4');
-    const text5 = document.getElementById('typed-text-5');
-
-    function typeText(element, text, delay) {
-        setTimeout(() => {
-            let index = 0;
-            const typingInterval = setInterval(() => {
-                element.textContent += text[index];
-                index++;
-                if (index >= text.length) {
-                    clearInterval(typingInterval);
-                }
-            }, 100); // Adjust typing speed as needed
-        }, delay);
-    }
-
-    // Start typing animations
-    typeText(text1, 'Hello! I am', 1000); // Delay in milliseconds
-    typeText(text2, ' Mark Vincent,', 2000); // Adjust delay as needed
-    typeText(text3, ' A', 3600); // Adjust delay as needed
-    typeText(text4, ' Junior Web Developer.', 3800); // Adjust delay as needed
-    typeText(text5, ' Welcome to my portfolio!', 6000); // Adjust delay as needed
-});
-</script>
-
+    <script src="text-type.js"></script>
 </body>
 </html>
