Added About me page, added tab icon.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                         <a class="nav-link fw-semibold" href="#about-me-page">About Me</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link fw-semibold" href="#">Projects</a>
+                                        <a class="nav-link fw-semibold" href="#projects-page">Projects</a>
                                     </li>
                                 </ul>
                             </div>
@@ -42,87 +42,200 @@
             </div>
         </header>
         <main class="main-content">
-            <div class="home-wrapper" id="home-page">
+            <section class="home-wrapper" id="home-page">
                 <div class="content-wrapper" id="gradient-background">
-                    <div class="d-flex justify-content-center" id="top-greetings">
-                        <div class="row greetings-wrapper">
-                            <p class="h2 text-center">
-                                <span id="typed-text-1"></span><span class="fw-semibold" id="typed-text-2"></span><br>
-                            </p>
-                            <p class="h2 text-center"><span id="typed-text-3"></span><span class="fw-semibold" id="typed-text-4"></span></p>
-                        </div>                    
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <div class="row image-wrapper">
-                            <img class="rounded" id="profile-img" src="profile.png" alt="profile.png">
+                    <div class="container">
+                        <div class="d-flex justify-content-center" id="top-greetings">
+                            <div class="row greetings-wrapper">
+                                <p class="h2 text-center">
+                                    <span id="typed-text-1"></span><span class="fw-bold" id="typed-text-2"></span><br>
+                                </p>
+                                <p class="h2 text-center"><span id="typed-text-3"></span><span class="fw-bold" id="typed-text-4"></span></p>
+                            </div>                    
                         </div>
-                    </div>
-                    <div class="d-flex justify-content-center pt-2">
-                        <div class="row description-wrapper">
-                            <p class="h2 text-center"><span class="fw-semibold" id="typed-text-5"></span>
-                            </p>
+                        <div class="d-flex justify-content-center">
+                            <div class="row image-wrapper">
+                                <img class="rounded-circle" id="profile-img" src="profile.png" alt="profile.png">
+                            </div>
                         </div>
+                        <div class="d-flex justify-content-center pt-2">
+                            <div class="row description-wrapper">
+                                <p class="h2 text-center"><span class="fw-semibold" id="typed-text-5"></span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-2">
+                            <div class="row">
+                                <div class="col-lg-8 col-md-8">
+                                    <div class="hero-social-list">
+                                        <ul class="d-inline-flex fs-1">
+                                            <li>
+                                                <a class="contact-icon text-info-emphasis px-2" href="https://github.com/SilentShadow01" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+                                            </li>
+                                            <li>
+                                                <a class="contact-icon text-info-emphasis px-2" href="https://www.facebook.com/MVinCentDeJesus/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                                            </li>
+                                            <li>
+                                                <a class="contact-icon text-info-emphasis px-2" href="https://www.linkedin.com/in/mark-vincent-de-jesus-9048242aa/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                                            </li>
+                                            <li>
+                                                <a class="contact-icon text-info-emphasis px-2" href="mailto:markvincentd625@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="icon-wrapper mt-3 mb-0 rounded">
+                            <div class="row">
+                                <div class="col-xl-2"></div>
+                                <div class="col-xl-8">
+                                    <div class="gallery-container p-2 rounded" style="background-color: rgba(255, 255, 255, 0.5);">
+                                        <div class="gallery" id="gallery">
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="bootstrap.png" alt="bootstrap.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="c-sharp.png" alt="c-sharp.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="css-3.png" alt="css-3.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="html.png" alt="html.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="java-script.png" alt="java-script.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="java.png" alt="java.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="mysql.png" alt="mysql.png">
+                                            </div>
+                                            <div class="gallery-item">
+                                                <img class="tech-img" src="php.png" alt="php.png">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-2"></div>  
+                                </div>
+                            </div>
+                        </div>
+                                                              
                     </div>
-                    <div class="d-flex justify-content-center pt-2">
+                </div>
+            </section>
+            <section class="about-me-wrapper" id="about-me-page">
+                <div class="content-wrapper" id="gradient-background">
+                    <div class="container">
                         <div class="row">
-                            <div class="col-lg-8 col-md-8">
-                                <div class="hero-social-list">
-                                    <ul class="d-inline-flex fs-1">
-                                        <li>
-                                            <a class="contact-icon text-info-emphasis px-2" href="https://github.com/SilentShadow01" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-                                        </li>
-                                        <li>
-                                            <a class="contact-icon text-info-emphasis px-2" href="https://www.facebook.com/MVinCentDeJesus/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-                                        </li>
-                                        <li>
-                                            <a class="contact-icon text-info-emphasis px-2" href="https://www.linkedin.com/in/mark-vincent-de-jesus-9048242aa/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                                        </li>
-                                        <li>
-                                            <a class="contact-icon text-info-emphasis px-2" href="mailto:markvincentd625@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-                                        </li>
-                                    </ul>
+                            <div class="col-xl-4 col-md-3 ms-5">
+                                <h1 class="text-dark fw-bold" id="page-title">About Me</h1>
+                            </div>
+                            <div class="row">
+                                <div class="col-xl-4 mb-2">
+                                    <img src="me.jpg" alt="me.jpg" class="img-fluid rounded h-100 border border-4 border-success" id="me-img">
+                                </div>
+                                <div class="col-xl-8">
+                                    <h3 class="sub-section-title fw-bold">Introduction</h3>
+                                    <p class="fw-semibold fst-italic">Hi, I'm Mark Vincent, a passionate web developer with a keen interest in creating responsive and user-friendly web applications.</p>
+                                    <h3 class="sub-section-title fw-bold">Background</h3>
+                                    <p class="fw-semibold fst-italic">I graduated with a degree in Computer Science and have completed several online courses and certifications in web development.</p>
+                                    <div class="row">
+                                        <div class="col-xl-4">
+                                            <h3 class="sub-section-title fw-bold">Skills</h3>
+                                            <ul class="fw-semibold">
+                                                <li>Teamwork</li>
+                                                <li>Adaptability</li>
+                                                <li>Problem-Solving</li>
+                                                <li>Time Management</li>
+                                                <li>Excellent in organization</li>
+                                                <li>Excellent in multitasking</li>
+                                                <li>Self-motivated</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-xl-8">
+                                            <h3 class="sub-section-title fw-bold">Experience</h3>
+                                            <p class="fw-semibold">I have worked on various projects as a freelancer and have experience with both front-end and back-end development.</p>
+                                            <h3 class="sub-section-title fw-bold">Passions and Interests</h3>
+                                            <p class="fw-semibold fst-italic">Outside of coding, I enjoy watching anime, playing games, and watching videos about programming.</p>
+                                            <h3 class="sub-section-title fw-bold">Goals and Aspirations</h3>
+                                            <p class="fw-semibold fst-italic">My goal is to continue learning and growing as a developer, contributing to impactful projects, and making a positive difference in the tech community.</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="icon-wrapper mt-5" style="background-color: rgba(255, 255, 255, 0.5);">
-                        <div class="row p-2">
-                            <ul class="d-inline-flex d-flex justify-content-between mb-0">
-                                <li>
-                                    <img class="tech-img" src="bootstrap.png" alt="bootstrap.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="java-script.png" alt="java-script.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="c-sharp.png" alt="c-sharp.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="css-3.png" alt="css-3.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="html.png" alt="html.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="java.png" alt="java.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="mysql.png" alt="mysql.png">
-                                </li>
-                                <li>
-                                    <img class="tech-img" src="php.png" alt="php.png">
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
-            </div>
-            <div class="about-me-wrapper" id="about-me-page">
-
-            </div>
+            </section>
+            <section class="projects-wrapper" id="projects-page">
+                <div class="content-wrapper" id="cloud-container">
+                </div>
+            </section>            
         </main>    
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="text-type.js"></script>
+    <script>
+        // JavaScript to continuously loop all carousel items
+const carousel = document.getElementById('gallery');
+const carouselItems = carousel.querySelectorAll('.gallery-item');
+const animationDuration = 10; // Adjust animation duration in seconds
+
+const itemWidth = 100; // Adjusted width of each item
+const spacing = 20; // Spacing between items
+
+const totalWidth = (itemWidth + spacing) * carouselItems.length; // Total width of all items including spacing
+carousel.style.width = totalWidth + 'px';
+
+carouselItems.forEach((item) => {
+    const clone = item.cloneNode(true);
+    carousel.appendChild(clone);
+});
+
+const keyframes = `@keyframes carousel-animation {
+    0% {
+        transform: translateX(0);
+    }
+    14.29% {
+        transform: translateX(calc(-${totalWidth}px / 7)); /* Move to the second image */
+    }
+    28.57% {
+        transform: translateX(calc(-${totalWidth}px / 7 * 2)); /* Move to the third image */
+    }
+    42.86% {
+        transform: translateX(calc(-${totalWidth}px / 7 * 3)); /* Move to the fourth image */
+    }
+    57.14% {
+        transform: translateX(calc(-${totalWidth}px / 7 * 4)); /* Move to the fifth image */
+    }
+    71.43% {
+        transform: translateX(calc(-${totalWidth}px / 7 * 5)); /* Move to the sixth image */
+    }
+    85.71% {
+        transform: translateX(calc(-${totalWidth}px / 7 * 6)); /* Move to the seventh image */
+    }
+    100% {
+        transform: translateX(-${totalWidth}px); /* Move back to the first image */
+    }
+}`;
+
+const styleSheet = document.styleSheets[0];
+styleSheet.insertRule(keyframes, styleSheet.cssRules.length);
+
+function resetCarousel() {
+    carousel.style.animation = 'none';
+    carousel.offsetHeight; /* Trigger reflow to restart animation */
+    carousel.style.animation = `carousel-animation ${animationDuration}s linear infinite`;
+}
+
+carousel.addEventListener('animationiteration', resetCarousel);
+
+carousel.style.animation = `carousel-animation ${animationDuration}s linear infinite`;
+
+    </script>
+    
 </body>
 </html>
