--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="Tie.jpg" sizes="180x180" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Annapurna+SIL:wght@400;700&family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="page-wrapper">
@@ -25,14 +30,14 @@
                         <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                             <div class="d-flex justify-content-center">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link active fw-semibold" aria-current="page" href="#home-page">Home</a>
+                                    <li class="nav-item font-3">
+                                        <a class="nav-link active fw-semibold fs-2" aria-current="page" href="#home-page">Home</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link fw-semibold" href="#about-me-page">About Me</a>
+                                    <li class="nav-item font-3">
+                                        <a class="nav-link fw-semibold fs-2" href="#about-me-page">About Me</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link fw-semibold" href="#projects-page">Projects</a>
+                                    <li class="nav-item font-3">
+                                        <a class="nav-link fw-semibold fs-2" href="#projects-page">Projects</a>
                                     </li>
                                 </ul>
                             </div>
@@ -130,14 +135,14 @@
                 <div class="content-wrapper" id="gradient-background">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xl-4 col-md-3 ms-5">
+                            <div class="col-xl-4 col-md-3 ms-5" id="page-title-col">
                                 <h1 class="text-dark fw-bold" id="page-title">About Me</h1>
                             </div>
                             <div class="row">
-                                <div class="col-xl-4 mb-2">
+                                <div class="col-xl-4 mb-2 add-margin">
                                     <img src="me.jpg" alt="me.jpg" class="img-fluid rounded h-100 border border-4 border-success" id="me-img">
                                 </div>
-                                <div class="col-xl-8">
+                                <div class="col-xl-8 rounded p-3 add-margin" style="background-color: rgba(255, 255, 255, 0.5);">
                                     <h3 class="sub-section-title fw-bold">Introduction</h3>
                                     <p class="fw-semibold fst-italic">Hi, I'm Mark Vincent, a passionate web developer with a keen interest in creating responsive and user-friendly web applications.</p>
                                     <h3 class="sub-section-title fw-bold">Background</h3>
