--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                         <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                             <div class="d-flex justify-content-center">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item font-3">
+                                    <li class="nav-item">
                                         <a class="nav-link active fw-semibold fs-2" aria-current="page" href="#home-page">Home</a>
                                     </li>
-                                    <li class="nav-item font-3">
+                                    <li class="nav-item">
                                         <a class="nav-link fw-semibold fs-2" href="#about-me-page">About Me</a>
                                     </li>
-                                    <li class="nav-item font-3">
+                                    <li class="nav-item">
                                         <a class="nav-link fw-semibold fs-2" href="#projects-page">Projects</a>
                                     </li>
                                 </ul>
@@ -146,18 +146,18 @@
                                     <h3 class="sub-section-title fw-bold">Introduction</h3>
                                     <p class="fw-semibold fst-italic">Hi, I'm Mark Vincent, a passionate web developer with a keen interest in creating responsive and user-friendly web applications.</p>
                                     <h3 class="sub-section-title fw-bold">Background</h3>
-                                    <p class="fw-semibold fst-italic">I graduated with a degree in Computer Science and have completed several online courses and certifications in web development.</p>
+                                    <p class="fw-semibold fst-italic">I am a fresh graduate with a degree of Bachelor of Science in Computer Science from President Ramon Magsaysay State Unitversity (Main Campus).</p>
                                     <div class="row">
                                         <div class="col-xl-4">
-                                            <h3 class="sub-section-title fw-bold">Skills</h3>
+                                            <h3 class="sub-section-title fw-bold">Technical Skills</h3>
                                             <ul class="fw-semibold">
-                                                <li>Teamwork</li>
-                                                <li>Adaptability</li>
-                                                <li>Problem-Solving</li>
-                                                <li>Time Management</li>
-                                                <li>Excellent in organization</li>
-                                                <li>Excellent in multitasking</li>
-                                                <li>Self-motivated</li>
+                                                <li>C#</li>
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>Bootstrap 5</li>
+                                                <li>PHP</li>
+                                                <li>JavaScript</li>
+                                                <li>MySql</li>
                                             </ul>
                                         </div>
                                         <div class="col-xl-8">
@@ -176,7 +176,12 @@
                 </div>
             </section>
             <section class="projects-wrapper" id="projects-page">
-                <div class="content-wrapper" id="cloud-container">
+                <div class="content-wrapper" id="gradient-background">
+                    <div class="container">
+                        <div class="col-xl-4 col-md-3 ms-5" id="page-title-col">
+                            <h1 class="text-dark fw-bold" id="page-title">Projects</h1>
+                        </div>
+                    </div>
                 </div>
             </section>            
         </main>    
